--- a/install
+++ b/install
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 
 folder=(bin nvim tmux uwuntu zsh)
-DOTFILES=$HOME/personal/dotfiles/main
+DOTFILES=$HOME/personal/dotfiles
 
 pushd $DOTFILES
 
